--- a/config.json
+++ b/config.json
@@ -5,5 +5,5 @@
     "xmi_folder": "input/xmi",
     "xmi_suitable_models": "output/AADL/xmi_suitable_models",
     "output_folder": "output",
-    "validate_csv": "MANCANTEvalidate/cluster_test_set_specific.csv"
+    "ground_truth": "input/ground_truth_cluster_labels.xlsx"
   }
